Improved VarFormatter, with less useless ThreadLocal and less lock contention.